# OP-TEE-QEMU-Simulation

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md
host/: Makefile  common.c  common.h  kmm_mock.c  kmm_mock.h  main.c  main_bench.c  main_delegate_demo.c  main_demo.c  main_full_crypto_bench.c  main_full_crypto_demo.c  main_full_crypto_verify.c  main_paillier_bench.c  main_paillier_ref.c  main_paillier_ta_demo.c  paillier_host.c  paillier_host.h
ta/: hello_world_ta.c  paillier_ta.c  paillier_ta.h  sub.mk  user_ta_header_defines.h
ta/include/: hello_world_ta.h
